--- a/portfolio.html
+++ b/portfolio.html
@@ -13,39 +13,45 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- Header -->
-    <header class="header" id="to-top">
-      <div class="container">
+    <header class="header">
+      <div class="header__container container">
         <nav class="all-nav">
-          <a class="logo-header" href="./index.html">
-            <span class="accent-logo">Web</span><span class="header-logo">Studio</span></a
+          <a class="logo-header" href="./index.html"
+            >Web<span class="logo-header__accent">Studio</span></a
           >
           <ul class="site-nav">
-            <li class="li-sitenav"><a href="./index.html">Студия</a></li>
-            <li class="li-sitenav">
-              <a class="current" href="./portfolio.html">Портфолио</a>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="./index.html">Студия</a>
             </li>
-            <li class="li-sitenav"><a href="./box.html">Контакты</a></li>
+            <li class="site-nav__item">
+              <a class="site-nav__link site-nav__link--current" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="site-nav__item">
+              <a class="site-nav__link" href="./box.html">Контакты</a>
+            </li>
           </ul>
         </nav>
         <ul class="contact-nav">
-          <li class="li-c-n">
-            <a class="link-c-n" href="info@devstudio.com">
-              <svg class="icon-c-n" width="16" height="12">
+          <li class="contact-nav__item">
+            <a class="contact-nav__link" href="info@devstudio.com">
+              <svg class="contact-nav__icon" width="16" height="12">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="li-c-n">
-            <a class="link-c-n" href="+380961111111">
-              <svg class="icon-c-n" width="10" height="16">
+          <li class="contact-nav__item">
+            <a class="contact-nav__link" href="+380631835854">
+              <svg class="contact-nav__icon" width="10" height="16">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
-              +38 096 111 11 11</a
+              +38 063 183 5854</a
             >
           </li>
         </ul>
@@ -238,8 +244,8 @@
     <footer class="footer">
       <div class="container div-footer">
         <div class="div-contact-footer">
-          <a class="logo-footer" href="./index.html">
-            <span class="accent-logo">Web</span><span class="footer-logo">Studio</span></a
+          <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-footer__accent">Studio</span></a
           >
           <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
           <ul>
@@ -334,8 +340,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- To top -->
-    <a href="#to-top"><button class="to-top" type="button">I</button></a>
   </body>
 </html>
